# tempinbox

./: .env.example  .gitignore  Caddyfile  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
app/: config.py  database.py  logging.py  main.py
app/api/: admin.py  deps.py  public.py
app/middleware/: rate_limit.py
app/models/: tables.py
app/schemas/: common.py  keys.py  messages.py
app/services/: blacklist.py  cleanup.py  keys.py  messages.py  rate_limiter.py
app/smtp/: __main__.py  parser.py  server.py
migrations/: env.py
migrations/versions/: 001_initial.py
scripts/: integration_test.sh  smoke_test.sh
tests/: conftest.py  test_api_admin.py  test_api_public.py  test_cleanup.py  test_middleware_rate_limit.py  test_parser.py  test_rate_limiter.py  test_services_blacklist.py  test_services_keys.py  test_services_messages.py  test_smtp.py
