[project]
name = "tempinbox"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic-settings>=2.7,<3",
    "aiosmtpd>=1.4,<2",
    "redis[hiredis]>=5.2,<6",
    "structlog>=24.4,<25",
    "python-multipart>=0.0.18",
    "nh3>=0.2,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    "testcontainers[postgres,redis]>=4,<5",
    "ty",
    "ruff>=0.8,<1",
    "coverage>=7,<8",
]

[tool.ty]
python-version = "3.13"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "PT", "RET", "SIM"]
ignore = ["B008", "COM812", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "ANN"]
"migrations/**" = ["ANN", "E402"]
"app/smtp/server.py" = ["N802"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
